add ajax bookmarklet

--- a/images/templates/images/image/list.html
+++ b/images/templates/images/image/list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>Images bookmarked</h1>
-    <div id="images-list">
+    <div id="image-list">
         {% include 'images/image/list_ajax.html' %}
     </div>
 {% endblock %}
